# xorgate-kvs-webrtc

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  entrypoint.sh  pipeline.example  readme.md
src/: Common.c  GstMedia.c  GstRecorder.c  Samples.h  main.c  recorder.c
